<resources>
    <string name="app_name">IISOP智能巡检系统</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_user_name">用户名错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_field_required">该字段不能为空</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="network_error">网络错误</string>
    <string name="title_activity_workshop">车间设备列表</string>
    <string name="title_activity_device_system_info">DeviceSystemInfoActivity</string>
    <string name="title_activity_device">车间</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="view">查看</string>
    <string name="ok">确认</string>
    <string name="can_not_find_device">找不到对应设备</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->
    <string name="server_setting">服务器设置</string>
    <string name="setting">设置</string>
    <string name="server_address">服务器地址</string>
    <string name="server_port">服务器端口</string>
    <string name="default_server_address">127.0.0.1</string>
    <string name="default_server_port">8129</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loading">正在加载...</string>

    <string name="help">help</string>
    <string name="need_external_storage_permission">应用程序需要读取文件系统来保存数据库</string>
    <string name="quit">退出</string>
    <string name="go_to_settings">去设置</string>
</resources>