<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:divider="@drawable/setting_item_divider"
    android:showDividers="middle|end" >
    <PreferenceCategory
        android:title="@string/server_setting">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/default_server_address"
            android:inputType="textCapWords"
            android:key="key_server_address"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:title="@string/server_address" />
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/default_server_port"
            android:inputType="textCapWords"
            android:key="key_server_port"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:title="@string/server_port" />
        </PreferenceCategory>
</PreferenceScreen>